--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5392,6 +5392,8 @@ h1 {
 #avatar {
   width: 200px;
   margin: 0 auto;
+  border-radius: 50%;
+  border: 3px double #909;
 }
 #title {
   width: 530px;
