--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -7,6 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <meta name="copyright" content="&copy; {{ site.author.name }} 2015">
+        <meta name="description" content="My personal website, where I list all of my main projects and occasionally blog.">
+
+    <meta property="og:description" content="My personal website, where I list all of my main projects and occasionally blog." />
+    <meta property="og:url" content="http://burntfen.com/" />
+    <meta property="og:site_name" content="Richard Littauer" />
+    <meta property="og:title" content="Richard Littauer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://burntfen.com/assets/img/avatar.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="510" />
+    <meta property="og:image:height" content="515" />
+
+    <!-- Twitter: card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Richard Littauer">
+    <meta name="twitter:description" content="My personal website, where I list all of my main projects and occasionally blog.">
+    <meta name="twitter:image" content="http://burntfen.com/assets/img/avatar.png">
+    <meta name="twitter:url" content="http://burntfen.com">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
