--- a/_includes/themes/twitter/index.html
+++ b/_includes/themes/twitter/index.html
@@ -34,7 +34,7 @@
     <!-- Le styles -->
     <link href="{{ HOME_PATH }}assets/css/bootstrap.css" rel="stylesheet">
     <link href="{{ HOME_PATH }}assets/css/responsive.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <link rel="shortcut icon" href="favicon.ico">
 
