--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -26,8 +26,8 @@
     <meta name="twitter:image" content="http://burntfen.com/assets/img/avatar.png">
     <meta name="twitter:url" content="http://burntfen.com">
 
-    <!-- OSMT -->
-    <link rel="profile" href="https://github.com/RichardLitt/open-source-metatags/" />
+    <!-- Open Source Protocol -->
+    <link rel="profile" href="http://osprotocol.com" />
     <meta property="os:repo" content="https://github.com/RichardLitt/richardlitt.github.com" />
     <meta property="os:rcs_type" content="git" />
     <meta property="os:src" content="git@github.com:RichardLitt/richrdlitt.github.com.git" />
