--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -30,7 +30,7 @@
     <link rel="profile" href="http://osprotocol.com" />
     <meta property="os:repo" content="https://github.com/RichardLitt/richardlitt.github.com" />
     <meta property="os:rcs_type" content="git" />
-    <meta property="os:src" content="git@github.com:RichardLitt/richrdlitt.github.com.git" />
+    <meta property="os:src" content="git@github.com:RichardLitt/richardlitt.github.com.git" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
